add Cell and SudokuBoard, and some logic

--- a/SudokuSolverTest/SudokuSolverTest.csproj
+++ b/SudokuSolverTest/SudokuSolverTest.csproj
@@ -38,8 +38,14 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\..\..\c#\c#ref\xunit-1.8\xunit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cell.cs" />
+    <Compile Include="Position.cs" />
+    <Compile Include="SudokuBoard.cs" />
     <Compile Include="SudokuSolverFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
