--- a/SudokuSolverTest/SudokuSolverTest.csproj
+++ b/SudokuSolverTest/SudokuSolverTest.csproj
@@ -44,13 +44,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cell.cs" />
+    <Compile Include="CellWrapper.cs" />
     <Compile Include="GeneralCandidateRule.cs" />
     <Compile Include="ICandidateRule.cs" />
-    <Compile Include="Position.cs" />
     <Compile Include="SudokuBoard.cs" />
     <Compile Include="SudokuSolverFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tokenizer.cs" />
+    <Compile Include="tokenizer\ITokenizerBase.cs" />
+    <Compile Include="tokenizer\NumberBoardTokenizer.cs" />
+    <Compile Include="tokenizer\VerticalBarStyleTokenizer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
